--- a/Productos.html
+++ b/Productos.html
@@ -33,25 +33,12 @@
                     </ul>
                 </div>
             </div>
-        </nav>
-
-        <!-- Masthead-->
-        <header class="masthead2">
-            <div class="container">
-                <div class="masthead-subheading"></div>
-                <div class="masthead-heading text-uppercase" style="color:#fed136">
-                    <!-- <h4>SANITIZACIÓN DE ALTO IMPACTO</h3> -->
-                    </div>
-                <!-- <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">                    
-                    Conócenos
-                </a> -->
-            </div>
-        </header>        
+        </nav>     
         <!-- Portfolio Grid-->
-        <section class="page-section bg-light" style="margin-top: 10%;" id="portfolio">
+        <section class="page-section bg-light" style="padding-top: 13%;" id="portfolio">
             <div class="container">
                 <div class="text-center">
-                    <h4 class="section-heading text-uppercase">Productos</h4>
+                    <h2 class="section-heading text-uppercase mb-5">Productos</h2>
                     <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
                 </div>
                 <div class="row">
