Se cubrio el responsive y se corrigieron errores

--- a/Productos.html
+++ b/Productos.html
@@ -24,18 +24,19 @@
                 <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="assets/img/logos/logo.png"  alt="" /></a><button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu<i class="fas fa-bars ml-1"></i></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ml-auto">
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://safecleanmx.com/">Inicio</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://safecleanmx.com/#Valores">Valores</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://safecleanmx.com/#about">Nosotros</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://safecleanmx.com/#portfolio">Servicios</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="index.html">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="index.html#Valores">Valores</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="index.html#about">Nosotros</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="index.html#portfolio">Servicios</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#productos">Productos</a></li>
                         <!--<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#team">Team</a></li>-->
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://safecleanmx.com/#contact">Contacto</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="index.html#contact">Contacto</a></li>
                     </ul>
                 </div>
             </div>
         </nav>     
         <!-- Portfolio Grid-->
-        <section class="page-section bg-light" style="padding-top: 13%;" id="portfolio">
+        <section class="page-section bg-light portafolio-productos" style="padding-top: 13%;" id="portfolio">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase mb-5">Productos</h2>
