--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
         <!-- Contact form JS-->
         <script src="assets/mail/jqBootstrapValidation.js"></script>
         <script src="assets/mail/contact_me.js"></script>
-        <!-- Core theme JS-->
+        <!-- Core Xtheme JS-->
         <script src="js/scripts.js"></script>
     </body>
 </html>
